--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -41,7 +41,7 @@
     display: none
 
 .lista-ul li, ol.lista-ol li, .lista-ul--color li, .ol.lista-ol--cuadro li, .lista-ol--cuadro li, .lista-ul--separador li, .lista-ul li i
-  display: flex-general
+  display: flex
 
 .introduccion
   .cajon.color-primario:before
