--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -26,7 +26,7 @@
   color: #12263F
 
 .boton *, .boton--sm *
-  color: #FFFFFF
+  color: #FFFF
 
 // versión escritorio/movil
 @media (min-width: 992px)
