--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -25,6 +25,9 @@
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
   color: #12263F
 
+.barra-avance__boton--regresar span 
+  color: #FFFF !important
+
 .boton *, .boton--sm *
   color: #FFFF
 
@@ -79,7 +82,7 @@
 
 .tarjeta.color5, .titulo1
   background-color: #FFE9DF
-  
+
 .tarjeta.color-primario
   background-color: #E2F5F1
 
